--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "core-js": "^3.15.1",
     "cross-env": "^7.0.3",
     "nuxt": "^2.15.7",
-    "nuxt-fontawesome": "^0.4.0"
+    "nuxt-fontawesome": "^0.4.0",
+    "push-dir": "^0.4.1"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.14.7",
