--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "lint:js": "eslint --ext \".js,.vue\" --ignore-path .gitignore .",
     "lint": "npm run lint:js",
     "build:gh-pages": "cross-env DEPLOY_ENV=GH_PAGES nuxt build",
-    "generate:gh-pages": "cross-env DEPLOY_ENV=GH_PAGES nuxt generate",
-    "deploy": "push-dir --dir=dist --branch=gh-pages --cleanup"
+    "generate:gh-pages": "cross-env DEPLOY_ENV=GH_PAGES nuxt generate"
   },
   "dependencies": {
     "@fortawesome/free-brands-svg-icons": "^5.15.4",
@@ -23,8 +22,7 @@
     "core-js": "^3.15.1",
     "cross-env": "^7.0.3",
     "nuxt": "^2.15.7",
-    "nuxt-fontawesome": "^0.4.0",
-    "push-dir": "^0.4.1"
+    "nuxt-fontawesome": "^0.4.0"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.14.7",
