--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -12,19 +12,8 @@ jobs:
         node: [14]
 
     steps:
-      - name: Checkout
-        uses: actions/checkout@master
-
-      - name: Setup node env
-        uses: actions/setup-node@v2.1.2
-        with:
-          node-version: ${{ matrix.node }}
-
-      - name: Install dependencies
-        run: yarn
-
       - name: Generate
-        run: yarn run generate
+        run: yarn run generate:gh-pages
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
